Removed trailing whitespaces

--- a/example/Makefile
+++ b/example/Makefile
@@ -1,6 +1,6 @@
 # (C) 2011-13 Nicola Bonelli <nicola.bonelli@antifork.org>
 
-CXX      = g++
+CXX      = clang++
 CXXFLAGS = -I ../ -std=c++11 -g -Wall -Wextra -Wsign-conversion -pedantic 
 
 
