--- a/runtime/yats.cabal
+++ b/runtime/yats.cabal
@@ -17,5 +17,6 @@ Executable yats
                         filepath >= 1.0, 
                         directory >= 1.1,
                         process >= 1.1,
-                        unix >= 2.0
+                        unix >= 2.0,
+                        ansi-terminal >= 0.5
     default-language:   Haskell2010
