--- a/runtime/yats.cabal
+++ b/runtime/yats.cabal
@@ -2,7 +2,7 @@
 -- see http://haskell.org/cabal/users-guide/
 
 name:                   yats
-version:                1.4
+version:                1.5
 
 license-file:           LICENSE
 author:                 Nicola Bonelli
@@ -11,7 +11,7 @@ category:               Utils
 build-type:             Simple
 cabal-version:          >=1.10
 
-Executable yats
+Executable runyats
     main-is:            yats.hs
     build-depends:      base >=4.5, 
                         filepath >= 1.0, 
